# picosearch

./: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml  vercel.json
backend/: agent.py  main.py  pyproject.toml
backend/notebooks/: ragas_eval.ipynb
docs/: writeup.md
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/search/: AutoModeInfo.tsx  ImageCard.tsx  ModeToggle.tsx  MorphingLoader.tsx  ResultsGrid.tsx  SearchBar.tsx
frontend/src/lib/: api.ts  types.ts
notebooks/: 01_data_pipeline.ipynb  02_ragas_eval.ipynb
